src/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

/* eslint-disable */

'use strict';

function peg$subclass(child, parent) {
    function ctor() {
        this.constructor = child;
    }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = 'SyntaxError';

    if (typeof Error.captureStackTrace === 'function') {
        Error.captureStackTrace(this, peg$SyntaxError);
    }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function (expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
        literal: function (expectation) {
            return '"' + literalEscape(expectation.text) + '"';
        },

        class: function (expectation) {
            var escapedParts = '',
                i;

            for (i = 0; i < expectation.parts.length; i++) {
                escapedParts +=
                    expectation.parts[i] instanceof Array
                        ? classEscape(expectation.parts[i][0]) +
                          '-' +
                          classEscape(expectation.parts[i][1])
                        : classEscape(expectation.parts[i]);
            }

            return '[' + (expectation.inverted ? '^' : '') + escapedParts + ']';
        },

        any: function (expectation) {
            return 'any character';
        },

        end: function (expectation) {
            return 'end of input';
        },

        other: function (expectation) {
            return expectation.description;
        },
    };

    function hex(ch) {
        return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
        return s
            .replace(/\\/g, '\\\\')
            .replace(/"/g, '\\"')
            .replace(/\0/g, '\\0')
            .replace(/\t/g, '\\t')
            .replace(/\n/g, '\\n')
            .replace(/\r/g, '\\r')
            .replace(/[\x00-\x0F]/g, function (ch) {
                return '\\x0' + hex(ch);
            })
            .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
                return '\\x' + hex(ch);
            });
    }

    function classEscape(s) {
        return s
            .replace(/\\/g, '\\\\')
            .replace(/\]/g, '\\]')
            .replace(/\^/g, '\\^')
            .replace(/-/g, '\\-')
            .replace(/\0/g, '\\0')
            .replace(/\t/g, '\\t')
            .replace(/\n/g, '\\n')
            .replace(/\r/g, '\\r')
            .replace(/[\x00-\x0F]/g, function (ch) {
                return '\\x0' + hex(ch);
            })
            .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
                return '\\x' + hex(ch);
            });
    }

    function describeExpectation(expectation) {
        return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
        var descriptions = new Array(expected.length),
            i,
            j;

        for (i = 0; i < expected.length; i++) {
            descriptions[i] = describeExpectation(expected[i]);
        }

        descriptions.sort();

        if (descriptions.length > 0) {
            for (i = 1, j = 1; i < descriptions.length; i++) {
                if (descriptions[i - 1] !== descriptions[i]) {
                    descriptions[j] = descriptions[i];
                    j++;
                }
            }
            descriptions.length = j;
        }

        switch (descriptions.length) {
            case 1:
                return descriptions[0];

            case 2:
                return descriptions[0] + ' or ' + descriptions[1];

            default:
                return (
                    descriptions.slice(0, -1).join(', ') +
                    ', or ' +
                    descriptions[descriptions.length - 1]
                );
        }
    }

    function describeFound(found) {
        return found ? '"' + literalEscape(found) + '"' : 'end of input';
    }

    return 'Expected ' + describeExpected(expected) + ' but ' + describeFound(found) + ' found.';
};

function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},
        peg$startRuleFunctions = { proto: peg$parseproto },
        peg$startRuleFunction = peg$parseproto,
        peg$c0 = function (z, a, b) {
            var arr = { syntax: a.syntax };
            arr.content = b.filter(function (a) {
                return a !== undefined;
            });
            return arr;
        },
        peg$c1 = '//',
        peg$c2 = peg$literalExpectation('//', false),
        peg$c3 = '\r\n',
        peg$c4 = peg$literalExpectation('\r\n', false),
        peg$c5 = '\n',
        peg$c6 = peg$literalExpectation('\n', false),
        peg$c7 = peg$anyExpectation(),
        peg$c8 = function () {},
        peg$c9 = '/*',
        peg$c10 = peg$literalExpectation('/*', false),
        peg$c11 = '*/',
        peg$c12 = peg$literalExpectation('*/', false),
        peg$c13 = /^[ \r\n\t]/,
        peg$c14 = peg$classExpectation([' ', '\r', '\n', '\t'], false, false),
        peg$c15 = /^[A-Za-z]/,
        peg$c16 = peg$classExpectation(
            [
                ['A', 'Z'],
                ['a', 'z'],
            ],
            false,
            false
        ),
        peg$c17 = /^[0-9]/,
        peg$c18 = peg$classExpectation([['0', '9']], false, false),
        peg$c19 = /^[0-7]/,
        peg$c20 = peg$classExpectation([['0', '7']], false, false),
        peg$c21 = /^[0-9A-Fa-f]/,
        peg$c22 = peg$classExpectation(
            [
                ['0', '9'],
                ['A', 'F'],
                ['a', 'f'],
            ],
            false,
            false
        ),
        peg$c23 = '_',
        peg$c24 = peg$literalExpectation('_', false),
        peg$c25 = function (a, b) {
            return a + b.join('');
        },
        peg$c26 = '.',
        peg$c27 = peg$literalExpectation('.', false),
        peg$c28 = function (a, b) {
            b.unshift([a]);
            return b
                .map(function (c) {
                    return c.join('');
                })
                .join('');
        },
        peg$c29 = function (a, b, c) {
            return (
                (a == '.' ? '.' : '') +
                b
                    .map(function (a) {
                        return a.join('');
                    })
                    .join('') +
                c
            );
        },
        peg$c30 = '0',
        peg$c31 = peg$literalExpectation('0', false),
        peg$c32 = /^[1-9]/,
        peg$c33 = peg$classExpectation([['1', '9']], false, false),
        peg$c34 = function (a) {
            return parseInt(a[0] + (a[1] ? a[1].join('') : ''));
        },
        peg$c35 = function (a) {
            return parseInt(a, 8);
        },
        peg$c36 = /^[xX]/,
        peg$c37 = peg$classExpectation(['x', 'X'], false, false),
        peg$c38 = function (a) {
            return parseInt(a, 16);
        },
        peg$c39 = 'inf',
        peg$c40 = peg$literalExpectation('inf', false),
        peg$c41 = 'nan',
        peg$c42 = peg$literalExpectation('nan', false),
        peg$c43 = /^[eE]/,
        peg$c44 = peg$classExpectation(['e', 'E'], false, false),
        peg$c45 = /^[+\-]/,
        peg$c46 = peg$classExpectation(['+', '-'], false, false),
        peg$c47 = 'true',
        peg$c48 = peg$literalExpectation('true', false),
        peg$c49 = 'false',
        peg$c50 = peg$literalExpectation('false', false),
        peg$c51 = "'",
        peg$c52 = peg$literalExpectation("'", false),
        peg$c53 = '"',
        peg$c54 = peg$literalExpectation('"', false),
        peg$c55 = function (obj) {
            return obj[1].join('');
        },
        peg$c56 = /^[^\0\n\\"']/,
        peg$c57 = peg$classExpectation(['\0', '\n', '\\', '"', "'"], true, false),
        peg$c58 = '\\',
        peg$c59 = peg$literalExpectation('\\', false),
        peg$c60 = /^["']/,
        peg$c61 = peg$classExpectation(['"', "'"], false, false),
        peg$c62 = /^[abfnrtv"'\\]/,
        peg$c63 = peg$classExpectation(
            ['a', 'b', 'f', 'n', 'r', 't', 'v', '"', "'", '\\'],
            false,
            false
        ),
        peg$c64 = ';',
        peg$c65 = peg$literalExpectation(';', false),
        peg$c66 = /^[\-+]/,
        peg$c67 = peg$classExpectation(['-', '+'], false, false),
        peg$c68 = 'syntax',
        peg$c69 = peg$literalExpectation('syntax', false),
        peg$c70 = '=',
        peg$c71 = peg$literalExpectation('=', false),
        peg$c72 = 'proto2',
        peg$c73 = peg$literalExpectation('proto2', false),
        peg$c74 = 'proto3',
        peg$c75 = peg$literalExpectation('proto3', false),
        peg$c76 = function (val) {
            return { type: 'syntax', syntax: val };
        },
        peg$c77 = 'import',
        peg$c78 = peg$literalExpectation('import', false),
        peg$c79 = 'weak',
        peg$c80 = peg$literalExpectation('weak', false),
        peg$c81 = 'public',
        peg$c82 = peg$literalExpectation('public', false),
        peg$c83 = function (mod, pkg) {
            return { type: 'import', package: pkg, modifier: mod };
        },
        peg$c84 = 'package',
        peg$c85 = peg$literalExpectation('package', false),
        peg$c86 = function (val) {
            return { type: 'package', package: val };
        },
        peg$c87 = 'option',
        peg$c88 = peg$literalExpectation('option', false),
        peg$c89 = function (name, val) {
            return { type: 'option', name: name, val: val };
        },
        peg$c90 = '(',
        peg$c91 = peg$literalExpectation('(', false),
        peg$c92 = ')',
        peg$c93 = peg$literalExpectation(')', false),
        peg$c94 = function (a, c) {
            if (Array.isArray(a)) a = a.join('');
            return a + (c[0] ? c[0].join('') : '');
        },
        peg$c95 = 'double',
        peg$c96 = peg$literalExpectation('double', false),
        peg$c97 = 'float',
        peg$c98 = peg$literalExpectation('float', false),
        peg$c99 = 'int32',
        peg$c100 = peg$literalExpectation('int32', false),
        peg$c101 = 'int64',
        peg$c102 = peg$literalExpectation('int64', false),
        peg$c103 = 'uint32',
        peg$c104 = peg$literalExpectation('uint32', false),
        peg$c105 = 'uint64',
        peg$c106 = peg$literalExpectation('uint64', false),
        peg$c107 = 'sint32',
        peg$c108 = peg$literalExpectation('sint32', false),
        peg$c109 = 'sint64',
        peg$c110 = peg$literalExpectation('sint64', false),
        peg$c111 = 'fixed32',
        peg$c112 = peg$literalExpectation('fixed32', false),
        peg$c113 = 'fixed64',
        peg$c114 = peg$literalExpectation('fixed64', false),
        peg$c115 = 'sfixed32',
        peg$c116 = peg$literalExpectation('sfixed32', false),
        peg$c117 = 'sfixed64',
        peg$c118 = peg$literalExpectation('sfixed64', false),
        peg$c119 = 'bool',
        peg$c120 = peg$literalExpectation('bool', false),
        peg$c121 = 'string',
        peg$c122 = peg$literalExpectation('string', false),
        peg$c123 = 'bytes',
        peg$c124 = peg$literalExpectation('bytes', false),
        peg$c125 = '[',
        peg$c126 = peg$literalExpectation('[', false),
        peg$c127 = ']',
        peg$c128 = peg$literalExpectation(']', false),
        peg$c129 = function (a) {
            var opts = {};
            a.map(function (a) {
                if (typeof a == 'object' && a != null) opts[a.name] = a.val;
            });
            return opts;
        },
        peg$c130 = 'repeated',
        peg$c131 = peg$literalExpectation('repeated', false),
        peg$c132 = function (a, b, c, d, e) {
            return {
                type: 'field',
                repeated: a != null,
                typename: b,
                name: c,
                fieldNo: d,
                opts: e == null ? {} : e,
            };
        },
        peg$c133 = ',',
        peg$c134 = peg$literalExpectation(',', false),
        peg$c135 = function (a, b) {
            var arr = [a];
            b.map(function (elem) {
                arr.push(elem);
            });
            return arr;
        },
        peg$c136 = function (name, val) {
            return { name: name, val: val };
        },
        peg$c137 = 'oneof',
        peg$c138 = peg$literalExpectation('oneof', false),
        peg$c139 = '{',
        peg$c140 = peg$literalExpectation('{', false),
        peg$c141 = '}',
        peg$c142 = peg$literalExpectation('}', false),
        peg$c143 = function (b, c) {
            var arr = [];
            c.map(function (a) {
                if (a && a.type) arr.push(a);
            });
            return { type: 'oneof', name: b, content: arr };
        },
        peg$c144 = function (b, c, d, e) {
            return {
                type: 'field',
                typename: b,
                name: c,
                fieldNo: d,
                opts: e == null ? {} : e,
            };
        },
        peg$c145 = 'map',
        peg$c146 = peg$literalExpectation('map', false),
        peg$c147 = '<',
        peg$c148 = peg$literalExpectation('<', false),
        peg$c149 = '>',
        peg$c150 = peg$literalExpectation('>', false),
        peg$c151 = function (a, b, c, d, e) {
            return {
                type: 'field',
                typename: 'map',
                key: a,
                value: b,
                name: c,
                fieldNo: d,
                opts: e == null ? {} : e,
            };
        },
        peg$c152 = 'reserved',
        peg$c153 = peg$literalExpectation('reserved', false),
        peg$c154 = 'to',
        peg$c155 = peg$literalExpectation('to', false),
        peg$c156 = 'enum',
        peg$c157 = peg$literalExpectation('enum', false),
        peg$c158 = function (a, b) {
            return { type: 'enum', name: a, content: b.content, opts: b.opts };
        },
        peg$c159 = function (a) {
            var opts = {};
            var content = [];
            for (var elem of a) {
                if (!elem) continue;
                else if (elem.type == 'enumField') content.push(elem);
                else if (elem.type == 'option') opts[elem.name] = elem.val;
            }
            return { content: content, opts: opts };
        },
        peg$c160 = function (a, b, c) {
            return { type: 'enumField', name: a, val: b, opts: c == null ? {} : c };
        },
        peg$c161 = 'message',
        peg$c162 = peg$literalExpectation('message', false),
        peg$c163 = function (a, b) {
            return { type: 'message', name: a, content: b.content, opts: b.opts };
        },
        peg$c164 = function (a) {
            var opts = {};
            var content = [];
            for (var elem of a) {
                if (!elem) continue;
                else if (elem.type == 'option') opts[elem.name] = elem.val;
                else content.push(elem);
            }
            return { content: content, opts: opts };
        },
        peg$c165 = 'service',
        peg$c166 = peg$literalExpectation('service', false),
        peg$c167 = function (a, b) {
            var opts = {};
            var content = [];
            for (var elem of b) {
                if (!elem) continue;
                else if (elem.type == 'option') opts[elem.name] = elem.val;
                else content.push(elem);
            }
            return { type: 'service', name: a, content: content, opts: opts };
        },
        peg$c168 = 'rpc',
        peg$c169 = peg$literalExpectation('rpc', false),
        peg$c170 = 'stream',
        peg$c171 = peg$literalExpectation('stream', false),
        peg$c172 = 'returns',
        peg$c173 = peg$literalExpectation('returns', false),
        peg$c174 = function (a, b, c, d, e, f) {
            if (b && b[0] == 'stream') {
                c = typeof c !== 'object' ? {} : c;
                c.stream = true;
            }
            if (d && d[0] == 'stream') {
                e = typeof e !== 'object' ? {} : e;
                e.stream = true;
            }
            if (f == ';') f = {};
            return { type: 'rpc', name: a, param: c, returns: e, opts: f };
        },
        peg$currPos = 0,
        peg$savedPos = 0,
        peg$posDetailsCache = [{ line: 1, column: 1 }],
        peg$maxFailPos = 0,
        peg$maxFailExpected = [],
        peg$silentFails = 0,
        peg$result;

    if ('startRule' in options) {
        if (!(options.startRule in peg$startRuleFunctions)) {
            throw new Error('Can\'t start parsing from rule "' + options.startRule + '".');
        }

        peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
        return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
        return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
        location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos);

        throw peg$buildStructuredError(
            [peg$otherExpectation(description)],
            input.substring(peg$savedPos, peg$currPos),
            location
        );
    }

    function error(message, location) {
        location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos);

        throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
        return { type: 'literal', text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
        return { type: 'class', parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
        return { type: 'any' };
    }

    function peg$endExpectation() {
        return { type: 'end' };
    }

    function peg$otherExpectation(description) {
        return { type: 'other', description: description };
    }

    function peg$computePosDetails(pos) {
        var details = peg$posDetailsCache[pos],
            p;

        if (details) {
            return details;
        } else {
            p = pos - 1;
            while (!peg$posDetailsCache[p]) {
                p--;
            }

            details = peg$posDetailsCache[p];
            details = {
                line: details.line,
                column: details.column,
            };

            while (p < pos) {
                if (input.charCodeAt(p) === 10) {
                    details.line++;
                    details.column = 1;
                } else {
                    details.column++;
                }

                p++;
            }

            peg$posDetailsCache[pos] = details;
            return details;
        }
    }

    function peg$computeLocation(startPos, endPos) {
        var startPosDetails = peg$computePosDetails(startPos),
            endPosDetails = peg$computePosDetails(endPos);

        return {
            start: {
                offset: startPos,
                line: startPosDetails.line,
                column: startPosDetails.column,
            },
            end: {
                offset: endPos,
                line: endPosDetails.line,
                column: endPosDetails.column,
            },
        };
    }

    function peg$fail(expected) {
        if (peg$currPos < peg$maxFailPos) {
            return;
        }

        if (peg$currPos > peg$maxFailPos) {
            peg$maxFailPos = peg$currPos;
            peg$maxFailExpected = [];
        }

        peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
        return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
        return new peg$SyntaxError(
            peg$SyntaxError.buildMessage(expected, found),
            expected,
            found,
            location
        );
    }

    function peg$parseproto() {
        var s0, s1, s2, s3, s4;

        s0 = peg$currPos;
        s1 = peg$parsews();
        if (s1 === peg$FAILED) {
            s1 = null;
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parsesyntax();
            if (s2 !== peg$FAILED) {
                s3 = [];
                s4 = peg$parseimport();
                if (s4 === peg$FAILED) {
                    s4 = peg$parsepackage();
                    if (s4 === peg$FAILED) {
                        s4 = peg$parseoption();
                        if (s4 === peg$FAILED) {
                            s4 = peg$parseemptyStatement();
                            if (s4 === peg$FAILED) {
                                s4 = peg$parsemessage();
                                if (s4 === peg$FAILED) {
                                    s4 = peg$parseenum();
                                    if (s4 === peg$FAILED) {
                                        s4 = peg$parseservice();
                                        if (s4 === peg$FAILED) {
                                            s4 = peg$parsews();
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
                while (s4 !== peg$FAILED) {
                    s3.push(s4);
                    s4 = peg$parseimport();
                    if (s4 === peg$FAILED) {
                        s4 = peg$parsepackage();
                        if (s4 === peg$FAILED) {
                            s4 = peg$parseoption();
                            if (s4 === peg$FAILED) {
                                s4 = peg$parseemptyStatement();
                                if (s4 === peg$FAILED) {
                                    s4 = peg$parsemessage();
                                    if (s4 === peg$FAILED) {
                                        s4 = peg$parseenum();
                                        if (s4 === peg$FAILED) {
                                            s4 = peg$parseservice();
                                            if (s4 === peg$FAILED) {
                                                s4 = peg$parsews();
                                            }
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
                if (s3 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c0(s1, s2, s3);
                    s0 = s1;
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseslcomment() {
        var s0, s1, s2, s3, s4, s5;

        s0 = peg$currPos;
        if (input.substr(peg$currPos, 2) === peg$c1) {
            s1 = peg$c1;
            peg$currPos += 2;
        } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c2);
            }
        }
        if (s1 !== peg$FAILED) {
            s2 = [];
            s3 = peg$currPos;
            s4 = peg$currPos;
            peg$silentFails++;
            if (input.substr(peg$currPos, 2) === peg$c3) {
                s5 = peg$c3;
                peg$currPos += 2;
            } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c4);
                }
            }
            if (s5 === peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 10) {
                    s5 = peg$c5;
                    peg$currPos++;
                } else {
                    s5 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c6);
                    }
                }
            }
            peg$silentFails--;
            if (s5 === peg$FAILED) {
                s4 = void 0;
            } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
                if (input.length > peg$currPos) {
                    s5 = input.charAt(peg$currPos);
                    peg$currPos++;
                } else {
                    s5 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c7);
                    }
                }
                if (s5 !== peg$FAILED) {
                    s4 = [s4, s5];
                    s3 = s4;
                } else {
                    peg$currPos = s3;
                    s3 = peg$FAILED;
                }
            } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
            }
            while (s3 !== peg$FAILED) {
                s2.push(s3);
                s3 = peg$currPos;
                s4 = peg$currPos;
                peg$silentFails++;
                if (input.substr(peg$currPos, 2) === peg$c3) {
                    s5 = peg$c3;
                    peg$currPos += 2;
                } else {
                    s5 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c4);
                    }
                }
                if (s5 === peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 10) {
                        s5 = peg$c5;
                        peg$currPos++;
                    } else {
                        s5 = peg$FAILED;
                        if (peg$silentFails === 0) {
                            peg$fail(peg$c6);
                        }
                    }
                }
                peg$silentFails--;
                if (s5 === peg$FAILED) {
                    s4 = void 0;
                } else {
                    peg$currPos = s4;
                    s4 = peg$FAILED;
                }
                if (s4 !== peg$FAILED) {
                    if (input.length > peg$currPos) {
                        s5 = input.charAt(peg$currPos);
                        peg$currPos++;
                    } else {
                        s5 = peg$FAILED;
                        if (peg$silentFails === 0) {
                            peg$fail(peg$c7);
                        }
                    }
                    if (s5 !== peg$FAILED) {
                        s4 = [s4, s5];
                        s3 = s4;
                    } else {
                        peg$currPos = s3;
                        s3 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s3;
                    s3 = peg$FAILED;
                }
            }
            if (s2 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 10) {
                    s3 = peg$c5;
                    peg$currPos++;
                } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c6);
                    }
                }
                if (s3 === peg$FAILED) {
                    if (input.substr(peg$currPos, 2) === peg$c3) {
                        s3 = peg$c3;
                        peg$currPos += 2;
                    } else {
                        s3 = peg$FAILED;
                        if (peg$silentFails === 0) {
                            peg$fail(peg$c4);
                        }
                    }
                }
                if (s3 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c8();
                    s0 = s1;
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parsemlcomment() {
        var s0, s1, s2, s3, s4, s5;
